# mcp-hub

./: SETUP_GUIDE.md  install.sh
dam-mcp/: CLAUDE.md  firestore.indexes.json  pyproject.toml
dam-mcp/cloud_functions/document_processor/: main.py  requirements.txt
dam-mcp/cloud_functions/granola_sync/: main.py  requirements.txt
dam-mcp/cloud_functions/meeting_notes_sync/: main.py  requirements.txt
dam-mcp/dam_mcp/core/: __init__.py  config.py  drive_sync.py  firestore.py  gcs.py  tools_figma_export.py  tools_get_document.py  tools_query_kb.py
dam-mcp/tests/: test_document_processor.py  test_drive_sync.py  test_firestore.py  test_get_document.py  test_granola_sync.py  test_meeting_notes_sync.py  test_query_kb.py
docs/: PROJECT_SHOWCASE.md
docs/context-companion-session/: pitch-messages.md
docs/knowledge-setup/: 2026-04-20-status-synthese.md  2026-04-21-synthese-fuer-sophie-luca.md  claude-project-instructions-template.md  experiment-plan-wochen-1-2.md  friday-retro-template.md  launch-readiness.md  meeting-agenda-sophie-luca.md  simon-tasks.md  team-readme.md
docs/superpowers/plans/: 2026-03-31-drive-to-gcs-sync.md  2026-04-07-knowledge-base-phase2.md  (+1 more)
knowledge-mcp/: README.md  pyproject.toml
knowledge-mcp/knowledge_mcp/: __init__.py
knowledge-mcp/knowledge_mcp/core/: __init__.py  access.py  config.py  firestore.py  server.py  tools_semantic.py  utils.py
knowledge-mcp/tests/: conftest.py  test_access.py  test_tools.py
plugins/ryzon-knowledge-ops/: README.md
scripts/: README.md  fix-double-tags.py  install-team-setup.sh
(+17 files in other folders)
